--- a/homepage.html
+++ b/homepage.html
@@ -16,9 +16,13 @@
 
       <div id = "nav">
          <p> Today's website : </p>
-         <p> <a href = "homepage.html" target = "_blank"> Home Page </a></p>
+         <p> <a href = "day_5/smessage.html" target = "_blank"> Secret Message </a></p>
     </div>
    <div id = "container">
+       <p> DAY 5 : <a href = "day_5/smessage.html" target = "_blank"> Secret Message </a></p>
+       <p> DAY 4 : <a href = "day_4/mondrain.html" target = "_blank"> Paint a Mondrain </a></p>
+       <p> DAY 3 : <a href = "day_3/random_background.html" target = "_blank"> Random Color Background </a></p>
+       <p> DAY 2 : <a href = "day_2/deal.html" target = "_blank"> Deal or No Deal? </a></p>
        <p> DAY 1 : <a href = "homepage.html" target = "_blank"> Home Page </a></p>
    </div>
 </div>
