added more projects

--- a/homepage.html
+++ b/homepage.html
@@ -16,9 +16,15 @@
 
       <div id = "nav">
          <p> Today's website : </p>
-         <p> <a href = "day_5/smessage.html" target = "_blank"> Secret Message </a></p>
+         <p> <a href = "day_10/color_clock.html" target = "_blank"> Color Clock </a></p>
     </div>
    <div id = "container">
+       <p> DAY 11 : <a href = "day_10/color_clock.html" target = "_blank"> Color Clock </a></p>
+       <p> DAY 10 : <a href = "day_10/minion_jiggler.html" target = "_blank"> Minion Jiggler </a></p>
+       <p> DAY 9 : <a href = "day_9/bouncing_ball.html" target = "_blank"> Bouncing Ball </a></p>
+       <p> DAY 8 : <a href = "day_8/drop_shadow.html" target = "_blank"> Drop Shadow </a></p>
+       <p> DAY 7 : <a href = "day_7/technicolor_boxes.html" target = "_blank"> Technicolor Boxes </a></p>
+       <p> DAY 6 : <a href = "day_6/day_tracker.html" target = "_blank"> Day Tracker </a></p>
        <p> DAY 5 : <a href = "day_5/smessage.html" target = "_blank"> Secret Message </a></p>
        <p> DAY 4 : <a href = "day_4/mondrain.html" target = "_blank"> Paint a Mondrain </a></p>
        <p> DAY 3 : <a href = "day_3/random_background.html" target = "_blank"> Random Color Background </a></p>
