--- a/Day_7/technicolor_boxes.html
+++ b/Day_7/technicolor_boxes.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Technicolor Boxes | Rathna Ganjigunta</title>
-		<link rel ="stylesheet" type ="text/css" href="technicolor_boxes.css"
+		<link rel ="stylesheet" type ="text/css" href="technicolor_boxes.css">
     </head>
     <body>
       <div id = "main">
