--- a/homepage.html
+++ b/homepage.html
@@ -16,10 +16,29 @@
 
       <div id = "nav">
          <p> Today's website : </p>
-         <p> <a href = "day_10/color_clock.html" target = "_blank"> Color Clock </a></p>
+         <p> <a href = "day_30/happy_dog.html" target = "_blank"> Happy Dog </a></p>
     </div>
    <div id = "container">
-       <p> DAY 11 : <a href = "day_10/color_clock.html" target = "_blank"> Color Clock </a></p>
+       <p> DAY 30 : <a href = "day_30/happy_dog.html" target = "_blank"> Happy Dog </a></p>
+       <p> DAY 29 : <a href = "day_29/magic_8.html" target = "_blank"> Magic 8 Ball </a>
+       <p> DAY 28 : <a href = "day_28/click_challenge.html" target = "_blank"> Click Challenge </a></p>
+       <p> DAY 27 : <a href = "day_27/rain_maker.html" target = "_blank"> Rain Maker </a>
+       <p> DAY 26 : <a href = "day_26/simon.html" target = "_blank"> Simon </a></p>
+       <p> DAY 25 : <a href = "day_25/scrambled.html" target = "_blank"> Scrambled </a>
+       <p> DAY 24 : <a href = "day_24/email_impact.html" target = "_blank"> Email Impact </a></p>
+       <p> DAY 23 : <a href = "day_23/stop_watch.html" target = "_blank"> Stop Watch </a>
+       <p> DAY 22 : <a href = "day_22/keep_it_straight.html" target = "_blank"> Keep It Straight </a></p>
+       <p> DAY 21 : <a href = "day_21/teleprompter.html" target = "_blank"> Teleprompter </a></p>
+       <p> DAY 20 : <a href = "day_20/smushing_fireflies.html" target = "_blank"> Smushing Fireflies </a></p>
+       <p> DAY 19 : <a href = "day_19/sf_hipster.html" target = "_blank"> Hipster Quiz </a></p>
+       <p> DAY 18 : <a href = "day_18/building_blocks.html" target = "_blank"> Building Blocks </a></p>
+       <p> DAY 17 : <a href = "day_17/party_time.html" target = "_blank"> Party Time ? </a></p>
+       <p> DAY 16 : <a href = "day_16/caterpillar.html" target = "_blank"> Caterpillar </a></p>
+       <p> DAY 15 : <a href = "day_15/dropping_boxes.html" target = "_blank"> Dropping Boxes </a></p>
+       <p> DAY 14 : <a href = "day_14/tough_love.html" target = "_blank"> Tough Love </a></p>
+       <p> DAY 13 : <a href = "day_13/rock_paper_scissors.html" target = "_blank"> Rock Paper Scissors </a></p>
+       <p> DAY 12 : <a href = "day_12/dice_roller.html" target = "_blank"> Dice Roller </a></p>
+       <p> DAY 11 : <a href = "day_11/color_clock.html" target = "_blank"> Color Clock </a></p>
        <p> DAY 10 : <a href = "day_10/minion_jiggler.html" target = "_blank"> Minion Jiggler </a></p>
        <p> DAY 9 : <a href = "day_9/bouncing_ball.html" target = "_blank"> Bouncing Ball </a></p>
        <p> DAY 8 : <a href = "day_8/drop_shadow.html" target = "_blank"> Drop Shadow </a></p>
