--- a/homepage.html
+++ b/homepage.html
@@ -16,17 +16,21 @@
 
       <div id = "nav">
          <p> Today's website : </p>
-         <p> <a href = "day_30/happy_dog.html" target = "_blank"> Happy Dog </a></p>
+         <p> <a href = "day_34/lucky_cat.html" target = "_blank"> Maneki-Neko </a></p>
     </div>
    <div id = "container">
+       <p> DAY 34 : <a href = "day_34/lucky_cat.html" target = "_blank"> Maneki-Neko </a></p>
+       <p> DAY 33 : <a href = "day_33/random_word.html" target = "_blank"> Random Word Generator </a></p>
+       <p> DAY 32 : <a href = "day_32/particle_waves.html" target = "_blank"> Particle Waves </a></p>
+       <p> DAY 31 : <a href = "day_31/endless_throbbers.html" target = "_blank"> Endless Throbbers </a></p>
        <p> DAY 30 : <a href = "day_30/happy_dog.html" target = "_blank"> Happy Dog </a></p>
-       <p> DAY 29 : <a href = "day_29/magic_8.html" target = "_blank"> Magic 8 Ball </a>
+       <p> DAY 29 : <a href = "day_29/magic_8.html" target = "_blank"> Magic 8 Ball </a></p>
        <p> DAY 28 : <a href = "day_28/click_challenge.html" target = "_blank"> Click Challenge </a></p>
        <p> DAY 27 : <a href = "day_27/rain_maker.html" target = "_blank"> Rain Maker </a>
        <p> DAY 26 : <a href = "day_26/simon.html" target = "_blank"> Simon </a></p>
-       <p> DAY 25 : <a href = "day_25/scrambled.html" target = "_blank"> Scrambled </a>
+       <p> DAY 25 : <a href = "day_25/scrambled.html" target = "_blank"> Scrambled </a></p>
        <p> DAY 24 : <a href = "day_24/email_impact.html" target = "_blank"> Email Impact </a></p>
-       <p> DAY 23 : <a href = "day_23/stop_watch.html" target = "_blank"> Stop Watch </a>
+       <p> DAY 23 : <a href = "day_23/stop_watch.html" target = "_blank"> Stop Watch </a></p>
        <p> DAY 22 : <a href = "day_22/keep_it_straight.html" target = "_blank"> Keep It Straight </a></p>
        <p> DAY 21 : <a href = "day_21/teleprompter.html" target = "_blank"> Teleprompter </a></p>
        <p> DAY 20 : <a href = "day_20/smushing_fireflies.html" target = "_blank"> Smushing Fireflies </a></p>
