added more projects feb28th

--- a/homepage.html
+++ b/homepage.html
@@ -16,9 +16,12 @@
 
       <div id = "nav">
          <p> Today's website : </p>
-         <p> <a href = "day_34/lucky_cat.html" target = "_blank"> Maneki-Neko </a></p>
+         <p> DAY 37 : <a href = "day_37/buttons.html" target = "_blank"> Buttons </a></p>
     </div>
    <div id = "container">
+       <p> DAY 37 : <a href = "day_37/buttons.html" target = "_blank"> Buttons </a></p>
+       <p> DAY 36 : <a href = "day_36/bouncy_balls.html" target = "_blank"> Bouncy Balls </a></p>
+       <p> DAY 35 : <a href = "day_35/little_dude.html" target = "_blank"> Little Dude </a></p>
        <p> DAY 34 : <a href = "day_34/lucky_cat.html" target = "_blank"> Maneki-Neko </a></p>
        <p> DAY 33 : <a href = "day_33/random_word.html" target = "_blank"> Random Word Generator </a></p>
        <p> DAY 32 : <a href = "day_32/particle_waves.html" target = "_blank"> Particle Waves </a></p>
