modified with new projects march 24

--- a/homepage.html
+++ b/homepage.html
@@ -16,9 +16,21 @@
 
       <div id = "nav">
          <p> Today's website : </p>
-         <p> DAY 37 : <a href = "day_37/buttons.html" target = "_blank"> Buttons </a></p>
+         <p> DAY 49 : <a href = "day_49/weather_now.html" target = "_blank"> Weather Now </a></p>
     </div>
    <div id = "container">
+       <p> DAY 49 : <a href = "day_49/weather_now.html" target = "_blank"> Weather Now </a></p>
+       <p> DAY 48 : <a href = "day_48/static.html" target = "_blank"> Static </a></p>
+       <p> DAY 47 : <a href = "day_47/pong.html" target = "_blank"> Pong </a></p>
+       <p> DAY 46 : <a href = "day_46/snake_game.html" target = "_blank"> Snake Game </a></p>
+       <p> DAY 45 : <a href = "day_45/color_test.html" target = "_blank"> Color Perception Test </a></p>
+       <p> DAY 44 : <a href = "day_44/analog_clock.html" target = "_blank"> Analog Clock </a></p>
+       <p> DAY 43 : <a href = "day_43/seeing_spots.html" target = "_blank"> Seeing Spots </a></p>
+       <p> DAY 42 : <a href = "day_42/magnetic_poetry.html" target = "_blank"> Magnetic Poetry </a></p>
+       <p> DAY 41 : <a href = "day_41/light_bulb.html" target = "_blank"> Light Bulb </a></p>
+       <p> DAY 40 : <a href = "day_40/popping_bubbles.html" target = "_blank"> Popping Bubbles </a></p>
+       <p> DAY 39 : <a href = "day_39/paint_brush.html" target = "_blank"> Paint Brush </a></p>
+       <p> DAY 38 : <a href = "day_38/type_attack.html" target = "_blank"> Type Attack </a></p>
        <p> DAY 37 : <a href = "day_37/buttons.html" target = "_blank"> Buttons </a></p>
        <p> DAY 36 : <a href = "day_36/bouncy_balls.html" target = "_blank"> Bouncy Balls </a></p>
        <p> DAY 35 : <a href = "day_35/little_dude.html" target = "_blank"> Little Dude </a></p>
