--- a/homepage.html
+++ b/homepage.html
@@ -12,13 +12,16 @@
           <p> I'm Rathna Ganjigunta and I'm learning coding everyday.</p>
           <p id = "para1"> One project a day ! </p>
           <p> You can follow the projects I work on here and on the <a href = "http://www.rathnaganjigunta.tumblr.com" target = "_blank">blog</a>
+          <img id="profile_pic" src="profilepic.jpg">
     </div>
 
       <div id = "nav">
          <p> Today's website : </p>
-         <p> DAY 49 : <a href = "day_49/weather_now.html" target = "_blank"> Weather Now </a></p>
+         <p> DAY 50 : <a href = "day_50/color_war.html" target = "_blank"> Color War </a></p>
     </div>
    <div id = "container">
+       
+       <p> DAY 50 : <a href = "day_50/color_war.html" target = "_blank"> Color War </a></p>
        <p> DAY 49 : <a href = "day_49/weather_now.html" target = "_blank"> Weather Now </a></p>
        <p> DAY 48 : <a href = "day_48/static.html" target = "_blank"> Static </a></p>
        <p> DAY 47 : <a href = "day_47/pong.html" target = "_blank"> Pong </a></p>
