--- a/homepage.html
+++ b/homepage.html
@@ -17,10 +17,12 @@
 
       <div id = "nav">
          <p> Today's website : </p>
-         <p> DAY 50 : <a href = "day_50/color_war.html" target = "_blank"> Color War </a></p>
+         <p> DAY 53 : <a href = "day_53/circle_invaders.html" target = "_blank"> Circle Invaders </a></p>
     </div>
    <div id = "container">
-       
+       <p> DAY 53 : <a href = "day_53/circle_invaders.html" target = "_blank"> Circle Invaders </a></p>
+       <p> DAY 52 : <a href = "day_52/etch_a_sketch.html" target = "_blank"> Etch A Sketch </a></p>
+       <p> DAY 51 : <a href = "day_51/memory.html" target = "_blank"> Memory Game </a></p>
        <p> DAY 50 : <a href = "day_50/color_war.html" target = "_blank"> Color War </a></p>
        <p> DAY 49 : <a href = "day_49/weather_now.html" target = "_blank"> Weather Now </a></p>
        <p> DAY 48 : <a href = "day_48/static.html" target = "_blank"> Static </a></p>
