Modified with new projects 04/14

--- a/homepage.html
+++ b/homepage.html
@@ -17,9 +17,17 @@
 
       <div id = "nav">
          <p> Today's website : </p>
-         <p> DAY 53 : <a href = "day_53/circle_invaders.html" target = "_blank"> Circle Invaders </a></p>
+         <p> DAY 60 : <a href = "day_60/fizz_buzz.html" target = "_blank"> Fizz Buzz </a></p>
     </div>
    <div id = "container">
+      
+       <p> DAY 60 : <a href = "day_60/fizz_buzz.html" target = "_blank"> Fizz Buzz </a></p>
+       <p> DAY 59 : <a href = "day_59/bubble_wrap.html" target = "_blank"> Bubble Wrap </a></p>
+       <p> DAY 58 : <a href = "day_58/fireworks.html" target = "_blank"> Fireworks </a></p>
+       <p> DAY 57 : <a href = "day_57/bug_blaster.html" target = "_blank"> Bug Blaster </a></p>
+       <p> DAY 56 : <a href = "day_56/hooray.html" target = "_blank"> Hooray </a></p>
+       <p> DAY 55 : <a href = "day_55/paratroopers.html" target = "_blank"> Paratroopers </a></p>
+       <p> DAY 54 : <a href = "day_54/calculator.html" target = "_blank"> Calculator </a></p>
        <p> DAY 53 : <a href = "day_53/circle_invaders.html" target = "_blank"> Circle Invaders </a></p>
        <p> DAY 52 : <a href = "day_52/etch_a_sketch.html" target = "_blank"> Etch A Sketch </a></p>
        <p> DAY 51 : <a href = "day_51/memory.html" target = "_blank"> Memory Game </a></p>
