added input autocomplete off

--- a/Day_60/fizz_buzz.html
+++ b/Day_60/fizz_buzz.html
@@ -29,7 +29,7 @@
 		</div>
 		<div id="num_container">000</div>
 		<form>
-			<input id="input" type="text">
+			<input id="input" type="text" autocomplete="off">
 			<input id="submit" type="submit" value="Submit">
 		</form>
 	</div>
