edtied homepage url

--- a/Day_46/snake_game.html
+++ b/Day_46/snake_game.html
@@ -13,7 +13,7 @@
 <header>
 	<a href ="snake_game.html" id = "title">Snake</a>
 	<div id="links_container">
-		<a href="homepage.html" id="home">Home</a>
+		<a href="../homepage.html" id="home">Home</a>
 		<a href="http://www.rathna.ganjigunta/tumblr" id="blog">Blog</a>
 	</div>
 	<br class= "clear">
