--- a/Day_66/alien_attack.html
+++ b/Day_66/alien_attack.html
@@ -8,10 +8,12 @@
     <script src="alien_attack.js" type="text/javascript" ></script>
 </head>
 <body>
+
   <div id = "score">Score : 0</div>
+
   <div class = "modal" id = "info">
   	<h3>Control your spaceship with the mouse</h3>
-  	<h3>Click the space tab to shoot</h3>
+  	<h3>Click to shoot the invaders</h3>
   </div>
 
   <div id="container">
@@ -19,7 +21,12 @@
 
   </div>
 
-   <footer>
+  <div class ="modal" id="game_over">
+     <h2>Game Over!</h2>
+     <a href="alien_attack.html">Play Again?</a>
+  </div>   
+
+  <footer>
 		<div id="links_container">
 			<a href="../homepage.html" target="_blank">Home</a>
 			<a href="http://rathnaganjigunta.tumblr.com/" target="_blank">Blog</a>
